<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/td_logo" />

        <EditText
            android:id="@+id/edttxtLoginemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edttxtloginpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtLoginemail"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtloginpass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/LoginWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/warning_something_is_wrong"
            android:textColor="@color/warning"
            android:visibility="gone" />

        <TextView
            android:id="@+id/GotoRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/LoginWarning"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/don_t_have_an_account_register_from_here"
            android:textColor="@color/American_Green" />




    </RelativeLayout>

    <TextView
        android:id="@+id/creditLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/developed_by_aria_taghizadeh"
        android:textStyle="italic" />

</RelativeLayout>