<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.RegisterActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="110dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/td_logo" />

        <EditText
            android:id="@+id/edttxtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"

            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/edttxtpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtemail"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edttxtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtpassword"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/edttxtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtName"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/address"
            android:lines="2" />

        <RelativeLayout
            android:id="@+id/imagesRelLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edttxtAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/firstimg"
                android:layout_width="50dp"
                android:layout_height="50dp"


                android:padding="4dp"
                android:src="@mipmap/man" />

            <ImageView
                android:id="@+id/secondimg"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@id/firstimg"
                android:padding="4dp"
                android:src="@mipmap/woman" />


        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imagesRelLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/American_Green"
            android:text="@string/register"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtviewWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnRegister"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/warning_something_is_wrong"
            android:textColor="@color/warning"
            android:layout_marginHorizontal="10dp"
            android:textSize="16sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtviewWarning"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/have_an_account_login"
            android:textColor="@color/American_Green"
            android:textSize="18sp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:text="@string/developed_by_aria_taghizadeh"
        android:textStyle="italic" />

</RelativeLayout>